All version related issues fixed

--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -2,7 +2,7 @@
 <ion-header>
 
   <ion-navbar no-border>
-    <ion-title>JobsApp</ion-title>
+    <ion-title>Jobs App</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -44,6 +44,6 @@
 </ion-grid>
  -->
 
- <button ion-button block clear margin-top (click)="goToLogin()" >Already have an account? <strong>Sign in.</strong></button>
+ <button ion-button block clear margin-top  (click)="login()" >Already have an account? <strong>Sign in.</strong></button>
 </ion-content>
 
