Resume upload partially done

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -3,7 +3,7 @@
         <img src="assets/img/user.jpeg" />
     </ion-item>
 
-    <ion-item>
-        <button id="uploadResume" (click)="uploadResume()">Upload Resume</button>
+    <ion-item text-center>
+        <button ion-button id="uploadResume" (click)="uploadResume()">Upload Resume</button>
     </ion-item>
 </ion-content>
