favoriting and applying for jobs - recording.

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -3,6 +3,9 @@
         <img src="assets/img/user.jpeg" />
     </ion-item>
 
+    <!-- <ion-item *ngIf="resumeUrl" text-center>
+        <a href="{{resumeUrl}}" ion-button>Resume</a>
+    </ion-item> -->
     <ion-item text-center>
         <button ion-button id="uploadResume" (click)="uploadResume()">Upload Resume</button>
     </ion-item>
