favorite jobs and events

--- a/src/pages/favorite-events/favorite-events.html
+++ b/src/pages/favorite-events/favorite-events.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the EventPage page.
+  Generated template for the FavoriteEventsPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>event</ion-title>
+    <ion-title>favorite-events</ion-title>
   </ion-navbar>
 
 </ion-header>
