Paypal integration complete

--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -1,12 +1,8 @@
 <ion-header>
-<header-component>
+<header-component title="Events">
 </header-component>
 </ion-header>
 <ion-content  >
-  
-  
       <events-feed></events-feed> 
-<!--    <ion-fab>
-      <button ion-fab color="danger" mode="md" ><ion-icon name="md-add"></ion-icon></button>
-    </ion-fab> -->
+
 </ion-content>
