--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,4 +1,18 @@
+<ion-header>
+        <ion-navbar>
+                <ion-title>Sam Peters</ion-title>
+                <ion-buttons end>
+                    <button ion-button icon-only (click)="closeModal()">
+                    <ion-icon name ="ios-close-circle-outline" color="dark" >
+                    </ion-icon>
+                 </button>
+                </ion-buttons>
+            </ion-navbar>
+        
+</ion-header>
+
 <ion-content padding>
+    
     <ion-item class text-center>
         <img src="assets/img/user.jpeg" />
     </ion-item>
