Profile page completed

--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -18,8 +18,8 @@
 </ion-row>
 </ion-grid>
 
-<page-favorite-jobs *ngIf="showJobs"></page-favorite-jobs>
-<page-favorite-events *ngIf="!showJobs"  ></page-favorite-events>
+<favorite-jobs-feed *ngIf="showJobs"></favorite-jobs-feed>
+<favorite-events-feed *ngIf="!showJobs"  ></favorite-events-feed>
      </ion-item>
 
         
