--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs no-border-top tabsPlacement="top" selectedIndex=1>
   <ion-tab [root]="tab1Root" tabTitle="All Offers" ></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Applied" ></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Events" ></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Favorites" ></ion-tab>
 </ion-tabs>
