--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -28,25 +28,7 @@
     <ion-input type="password" name="password" placeholder="Password" [(ngModel)]="password" floating></ion-input>
   </ion-item>
   <button ion-button block color="secondary" margin-top (click)="login()" ><strong>Sign In</strong></button>
-   <!-- <button ion-button block clear margin-top ><span class="line-through">&nbsp;Or continue with&nbsp;</span></button> -->
 </ion-list>
 
-
-<!-- <ion-grid>
-<ion-row>
-<ion-col>
-<ion-img width="50" height="50" src="assets/img/f.png"></ion-img>
-</ion-col>
-<ion-col>
-<ion-img width="50" height="50" src="assets/img/google.png"></ion-img>
-</ion-col>
-<ion-col>
-<ion-img width="50" height="50" src="assets/img/f.png"></ion-img>
-</ion-col>
-
-</ion-row>
-</ion-grid> -->
-
-
- <button ion-button block clear  (click)="goToRegister()" >Don't have an account? <strong>Sign up.</strong></button>
+ <!-- <button ion-button block clear  (click)="goToRegister()" >Don't have an account? <strong>Sign up.</strong></button> -->
 </ion-content>
