--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -21,7 +21,7 @@
 
 
   <ion-item margin-bottom>
-    <ion-input type="text" name ="email" placeholder="Username" [(ngModel)]="email" floating></ion-input>
+    <ion-input type="email" name ="email" placeholder="Username" [(ngModel)]="email" floating></ion-input>
   </ion-item>
 
   <ion-item margin-bottom>
