--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,34 +1,33 @@
-<!--
-  Generated template for the Login page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
+    <ion-navbar>
+        <ion-title>SIGN IN</ion-title>
+            <ion-buttons start>
+                <button ion-button icon-only (click)="closeModal()">
+                <ion-icon name ="close" color="dark" >
+                </ion-icon>
+             </button>
+            </ion-buttons>
+        </ion-navbar>
+    
+  </ion-header>
+  
 
-  <ion-navbar no-border>
-    <ion-title>Jobs App</ion-title>
-  </ion-navbar>
 
-</ion-header>
-
-
-<ion-content padding>
+<ion-content>
   <ion-list no-lines>
 
-    <ion-item class="call heading-one" text-wrap><h1>Hello! Welcome back.</h1></ion-item>
-    <ion-item class="call heading-two" text-wrap>Sign into your account below: </ion-item>
-
-
-  <ion-item margin-bottom>
-    <ion-input type="email" name ="email" placeholder="Username" [(ngModel)]="email" floating></ion-input>
+     <ion-item margin-bottom>
+    <ion-label icon-only><ion-icon name="mail"></ion-icon></ion-label>
+    <ion-input type="email" name ="email" placeholder="Email" [(ngModel)]="email" floating></ion-input>
   </ion-item>
 
   <ion-item margin-bottom>
-    <ion-input type="password" name="password" placeholder="Password" [(ngModel)]="password" floating></ion-input>
+      <ion-label icon-only><ion-icon name="lock"></ion-icon></ion-label>
+    <ion-input type="password" name="password" placeholder="Password (min 6 characters)" [(ngModel)]="password" floating></ion-input>
   </ion-item>
-  <button ion-button block color="secondary" margin-top (click)="login()" ><strong>Sign In</strong></button>
+  <button ion-button block class="login-button" margin-top (click)="login()" ><strong>CONTINUE</strong></button>
 </ion-list>
 
+ <button ion-button block clear class="forgot-password">FORGOT PASSWORD?</button>
  <!-- <button ion-button block clear  (click)="goToRegister()" >Don't have an account? <strong>Sign up.</strong></button> -->
 </ion-content>
