--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -1,10 +1,10 @@
 <ion-content>
 <img src="img/landing.png"/>
 <ion-item text-center>
-  <span class="link" (click)="login()">Sign up with Email</span>
+  <span class="link" (click)="register()">Sign up with Email</span>
   <br>
   <span>Already have an account? </span>
-  <span class="link" (click)="register()">Sign in</span>
+  <span class="link" (click)="login()">Sign in</span>
   
   </ion-item>
 </ion-content>
