--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -28,6 +28,6 @@
   <button ion-button block class="login-button" margin-top (click)="login()" ><strong>CONTINUE</strong></button>
 </ion-list>
 
- <button ion-button block clear class="forgot-password">FORGOT PASSWORD?</button>
+ <button ion-button block clear class="forgot-password" (click)="forgotPassword()">FORGOT PASSWORD?</button>
  <!-- <button ion-button block clear  (click)="goToRegister()" >Don't have an account? <strong>Sign up.</strong></button> -->
 </ion-content>
