--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -26,7 +26,7 @@
      
     <ion-input type="password" name="password" placeholder="Password" [(ngModel)]="password" ></ion-input>
   </ion-item>
-  <button ion-button block class="login-button" margin-top (click)="login()" ><strong>CONTINUE</strong></button>
+  <button ion-button block class="login-button" margin-top (click)="register()" ><strong>CONTINUE</strong></button>
   <!-- <button ion-button block color="secondary" margin-top (click)="register()" ><strong>Sign Up</strong></button> -->
    <!-- <button ion-button block clear margin-top ><span class="line-through">&nbsp;Or continue with&nbsp;</span></button> -->
 </ion-list>
