--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,7 @@
 <ion-tabs no-border-top tabsPlacement="top" selectedIndex=0>
-  <ion-tab [root]="tab1Root" tabTitle="All Offers" ></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Applied" ></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Events" ></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Favorites" ></ion-tab>
+    <ion-tab [root]="tab1Root" tabTitle="All Offers"></ion-tab>
+    <ion-tab [root]="tab4Root" tabTitle="Applied"></ion-tab>
+    <ion-tab [root]="tab2Root" tabTitle="Events"></ion-tab>
+    <ion-tab [root]="tab3Root" tabTitle="Favorites"></ion-tab>
+    <ion-tab [root]="tab5Root" tabTitle="Chats" tabIcon="chatbubbles" tabsHideOnSubPages="true"></ion-tab>
 </ion-tabs>
