--- a/src/pages/job/job.html
+++ b/src/pages/job/job.html
@@ -25,7 +25,7 @@
       </ion-item>
       <ion-item>
       <ion-avatar item-left>
-          <img src = "{{job.imgURL}}">
+          <img src = "{{job.imgUrl}}">
           </ion-avatar>
          <ion-grid>
           <ion-row>
