--- a/src/pages/contacts/contacts.html
+++ b/src/pages/contacts/contacts.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ContactsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
     <ion-navbar color="hcolor">
@@ -26,9 +20,9 @@
         <ion-item-sliding *ngFor="let item of myRequests">
             <ion-item>
                 <ion-avatar item-left>
-                    <img src="{{item.pictureUrl}}">
+                    <img src="{{item.senderImgUrl}}">
                 </ion-avatar>
-                <h4>{{item.displayName}}</h4>
+                <h4>{{item.senderName}}</h4>
             </ion-item>
             <ion-item-options>
                 <button ion-button color="secondary" (click)="accept(item)">
@@ -41,6 +35,7 @@
         </button>
             </ion-item-options>
         </ion-item-sliding>
+<!-- 
         <ion-list-header>
             Friends
         </ion-list-header>
@@ -49,6 +44,7 @@
                 <img src={{item.pictureUrl}}>
             </ion-avatar>
             <h3>{{item.displayName}}</h3>
-        </ion-item>
-    </ion-list>
+        </ion-item> -->
+    </ion-list> 
+
 </ion-content>
