--- a/src/pages/contactchats/contactchats.html
+++ b/src/pages/contactchats/contactchats.html
@@ -1,17 +1,9 @@
-<!--
-  Generated template for the ContactchatsPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
     <ion-navbar color="hcolor">
-        <ion-title>{{contact.displayName}}</ion-title>
-        <ion-buttons end>
-            <button ion-button (click)="sendPicMsg()">
-                <ion-icon name="camera"></ion-icon>
-            </button>
-        </ion-buttons>
+        <ion-title *ngIf="uid === contact.id1">{{displayName1}}</ion-title>
+        
+        
     </ion-navbar>
 </ion-header>
 
@@ -19,32 +11,35 @@
 <ion-content #content>
     <div class="chatwindow">
         <ion-list no-lines>
-            <ion-item *ngFor="let item of allmessages; let i = index" text-wrap>
-                <ion-avatar item-left *ngIf="item.sentby === contact.uid">
-                    <img src="{{contact.pictureUrl}}">
+            <ion-item *ngFor="let item of allmessages" text-wrap>
+                <ion-avatar item-right *ngIf="item.id1 === uid">
+                    <img src="{{pictureUrl1}}">
                 </ion-avatar>
-                <div class="bubble me" *ngIf="item.sentby === contact.uid">
-                    <h3 *ngIf="!imgornot[i]">{{item.message}}</h3>
-                    <img src="{{item.message}}" *ngIf="imgornot[i]">
-                </div>
-                <ion-avatar item-right *ngIf="item.sentby != contact.uid">
-                    <img src="{{pictureURL}}">
-                </ion-avatar>
-                <div class="bubble you" *ngIf="item.sentby != contact.uid">
-                    <h3 *ngIf="!imgornot[i]">{{item.message}}</h3>
-                    <img src="{{item.message}}" *ngIf="imgornot[i]">
-                </div>
+                <ion-avatar item-left *ngIf="item.id2 === uid">
+                        <img src="{{pictureUrl2}}">
+                    </ion-avatar>
+                <div class="bubble" >
+                    <h3 *ngIf="item.attachment === false">{{item.message}}</h3>
+                    <img src="{{item.message}}" *ngIf="item.attachment === true">
+                    <span class="date">{{item.timeStamp | date:'medium'}}</span>
+                </div> 
             </ion-item>
         </ion-list>
     </div>
 </ion-content>
 <ion-footer ion-fixed>
     <ion-toolbar class="no-border" color="white">
-        <ion-input [(ngModel)]="newmessage" placeholder="Write your message ..."></ion-input>
+        <ion-input [(ngModel)]="newmessage" placeholder="Write your message ..."></ion-input>              
         <ion-buttons end>
             <button ion-button (click)="addMessage()">
-        <ion-icon name="send" color="primary"></ion-icon>
-      </button>
+                <ion-icon name="send" color="primary"></ion-icon>
+            </button>
+            <button ion-button (click)="sendPicMsg()">
+                <ion-icon name="camera"></ion-icon>
+            </button>
+            <button ion-button (click)="attachment()">
+                <ion-icon name="attach" ></ion-icon>
+            </button>      
         </ion-buttons>
     </ion-toolbar>
 </ion-footer>
