--- a/src/pages/contacts/contacts.html
+++ b/src/pages/contacts/contacts.html
@@ -35,7 +35,7 @@
         </button>
             </ion-item-options>
         </ion-item-sliding>
-<!-- 
+
         <ion-list-header>
             Friends
         </ion-list-header>
@@ -44,7 +44,7 @@
                 <img src={{item.pictureUrl}}>
             </ion-avatar>
             <h3>{{item.displayName}}</h3>
-        </ion-item> -->
+        </ion-item>
     </ion-list> 
 
 </ion-content>
