--- a/src/pages/groupcontacts/groupcontacts.html
+++ b/src/pages/groupcontacts/groupcontacts.html
@@ -1,15 +1,7 @@
-<!--
-  Generated template for the GroupcontactsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
     <ion-navbar color="hcolor">
         <ion-title>Group Contacts</ion-title>
     </ion-navbar>
-
 </ion-header>
 
 
@@ -17,19 +9,16 @@
     <ion-searchbar [(ngModel)]="searchstring" (input)="searchuser($event)" placeholder="Search">
     </ion-searchbar>
     <ion-list no-lines>
-        <ion-item-sliding *ngFor="let key of mycontacts">
+        <ion-item *ngFor="let key of mycontacts">
             <ion-item>
                 <ion-avatar item-left>
                     <img src="{{key.photoURL}}">
                 </ion-avatar>
                 <h2>{{key.displayName}}</h2>
             </ion-item>
-            <ion-item-options slide="left">
-                <button ion-button color="primary" (click)="addContact(key)">
-        <ion-icon name="person-add"></ion-icon>
-        Add
-      </button>
-            </ion-item-options>
-        </ion-item-sliding>
+                
+        <ion-icon name="person-add" (click)="addContact(key)" item-right></ion-icon>
+      
+        </ion-item>
     </ion-list>
 </ion-content>
