--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -3,6 +3,6 @@
     <ion-tab [root]="tab4Root" tabTitle="Applied"></ion-tab>
     <ion-tab [root]="tab2Root" tabTitle="Events"></ion-tab>
     <ion-tab [root]="tab3Root" tabTitle="Favorites"></ion-tab>
-    <ion-tab [root]="tab5Root" tabTitle="Chats" tabIcon="chatbubbles" tabsHideOnSubPages="true"></ion-tab>
-    <ion-tab [root]="tab6Root" tabTitle="Groups" tabIcon="contacts" tabsHideOnSubPages="true"></ion-tab>
+    <!-- <ion-tab [root]="tab5Root" tabTitle="Chats" tabIcon="chatbubbles" tabsHideOnSubPages="true"></ion-tab>
+    <ion-tab [root]="tab6Root" tabTitle="Groups" tabIcon="contacts" tabsHideOnSubPages="true"></ion-tab> -->
 </ion-tabs>
